# halal_scanner

./: README.md  pyproject.toml  report.md
src/halal_scanner/: crew.py  main.py
src/halal_scanner/config/: tasks.yaml
src/rabe7agent/: crew.py  main.py
src/rabe7agent/config/: agents.yaml  tasks.yaml
src/rabe7agent/tools/: custom_tool.py
