[project]
name = "halal_scanner"
version = "0.1.0"
description = "halal_scanner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
halal_scanner = "halal_scanner.main:run"
run_crew = "halal_scanner.main:run"
train = "halal_scanner.main:train"
replay = "halal_scanner.main:replay"
test = "halal_scanner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
