[project]
name = "rabe7agent"
version = "0.1.0"
description = "rabe7Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
rabe7agent = "rabe7agent.main:run"
run_crew = "rabe7agent.main:run"
train = "rabe7agent.main:train"
replay = "rabe7agent.main:replay"
test = "rabe7agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
